// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`t-slot directive can define and call slots 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"Parent\\"
    let utils = this.constructor.utils;
    let QWeb = this.constructor;
    let parent = context;
    let scope = Object.create(context);
    let h = this.h;
    let c1 = [], p1 = {key:1};
    let vn1 = h('div', p1, c1);
    // Component 'Dialog'
    let w2 = '__3__' in parent.__owl__.cmap ? parent.__owl__.children[parent.__owl__.cmap['__3__']] : false;
    let props2 = {};
    if (w2 && w2.__owl__.currentFiber && !w2.__owl__.vnode) {
        w2.destroy();
        w2 = false;
    }
    if (w2) {
        w2.__updateProps(props2, extra.fiber, Object.assign(Object.create(context), scope));
        let pvnode = w2.__owl__.pvnode;
        c1.push(pvnode);
    } else {
        let componentKey2 = \`Dialog\`;
        let W2 = context.constructor.components[componentKey2] || QWeb.components[componentKey2]|| scope['Dialog'];
        if (!W2) {throw new Error('Cannot find the definition of component \\"' + componentKey2 + '\\"')}
        w2 = new W2(parent, props2);
        parent.__owl__.cmap['__3__'] = w2.__owl__.id;
        w2.__owl__.slotId = 1;
        let fiber = w2.__prepare(extra.fiber, Object.assign(Object.create(context), scope), () => { const vnode = fiber.vnode; pvnode.sel = vnode.sel; });
        let pvnode = h('dummy', {key: '__3__', hook: {remove() {},destroy(vn) {w2.destroy();}}});
        c1.push(pvnode);
        w2.__owl__.pvnode = pvnode;
    }
    w2.__owl__.parentLastFiberId = extra.fiber.id;
    return vn1;
}"
`;

exports[`t-slot directive can define and call slots 2`] = `
"function anonymous(context, extra
) {
    // Template name: \\"Dialog\\"
    let h = this.h;
    let c6 = [], p6 = {key:6};
    let vn6 = h('div', p6, c6);
    let c7 = [], p7 = {key:7};
    let vn7 = h('div', p7, c7);
    c6.push(vn7);
    const slot8 = this.constructor.slots[context.__owl__.slotId + '_' + 'header'];
    if (slot8) {
        slot8.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c7, parent: extra.parent || context}));
    }
    let c9 = [], p9 = {key:9};
    let vn9 = h('div', p9, c9);
    c6.push(vn9);
    const slot10 = this.constructor.slots[context.__owl__.slotId + '_' + 'footer'];
    if (slot10) {
        slot10.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c9, parent: extra.parent || context}));
    }
    return vn6;
}"
`;

exports[`t-slot directive can define and call slots 3`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_header_template\\"
    let h = this.h;
    let c1 = extra.parentNode;
    let c4 = [], p4 = {key:4};
    let vn4 = h('span', p4, c4);
    c1.push(vn4);
    c4.push({text: \`header\`});
}"
`;

exports[`t-slot directive can define and call slots 4`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_footer_template\\"
    let h = this.h;
    let c1 = extra.parentNode;
    let c5 = [], p5 = {key:5};
    let vn5 = h('span', p5, c5);
    c1.push(vn5);
    c5.push({text: \`footer\`});
}"
`;

exports[`t-slot directive can define and call slots using old t-set keyword 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"__template__2\\"
    let utils = this.constructor.utils;
    let QWeb = this.constructor;
    let parent = context;
    let scope = Object.create(context);
    let h = this.h;
    let c1 = [], p1 = {key:1};
    let vn1 = h('div', p1, c1);
    // Component 'Dialog'
    let w2 = '__3__' in parent.__owl__.cmap ? parent.__owl__.children[parent.__owl__.cmap['__3__']] : false;
    let props2 = {};
    if (w2 && w2.__owl__.currentFiber && !w2.__owl__.vnode) {
        w2.destroy();
        w2 = false;
    }
    if (w2) {
        w2.__updateProps(props2, extra.fiber, Object.assign(Object.create(context), scope));
        let pvnode = w2.__owl__.pvnode;
        c1.push(pvnode);
    } else {
        let componentKey2 = \`Dialog\`;
        let W2 = context.constructor.components[componentKey2] || QWeb.components[componentKey2]|| scope['Dialog'];
        if (!W2) {throw new Error('Cannot find the definition of component \\"' + componentKey2 + '\\"')}
        w2 = new W2(parent, props2);
        parent.__owl__.cmap['__3__'] = w2.__owl__.id;
        w2.__owl__.slotId = 1;
        let fiber = w2.__prepare(extra.fiber, Object.assign(Object.create(context), scope), () => { const vnode = fiber.vnode; pvnode.sel = vnode.sel; });
        let pvnode = h('dummy', {key: '__3__', hook: {remove() {},destroy(vn) {w2.destroy();}}});
        c1.push(pvnode);
        w2.__owl__.pvnode = pvnode;
    }
    w2.__owl__.parentLastFiberId = extra.fiber.id;
    return vn1;
}"
`;

exports[`t-slot directive can define and call slots using old t-set keyword 2`] = `
"function anonymous(context, extra
) {
    // Template name: \\"__template__1\\"
    let h = this.h;
    let c6 = [], p6 = {key:6};
    let vn6 = h('div', p6, c6);
    let c7 = [], p7 = {key:7};
    let vn7 = h('div', p7, c7);
    c6.push(vn7);
    const slot8 = this.constructor.slots[context.__owl__.slotId + '_' + 'header'];
    if (slot8) {
        slot8.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c7, parent: extra.parent || context}));
    }
    let c9 = [], p9 = {key:9};
    let vn9 = h('div', p9, c9);
    c6.push(vn9);
    const slot10 = this.constructor.slots[context.__owl__.slotId + '_' + 'footer'];
    if (slot10) {
        slot10.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c9, parent: extra.parent || context}));
    }
    return vn6;
}"
`;

exports[`t-slot directive can define and call slots using old t-set keyword 3`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_header_template\\"
    let h = this.h;
    let c1 = extra.parentNode;
    let c4 = [], p4 = {key:4};
    let vn4 = h('span', p4, c4);
    c1.push(vn4);
    c4.push({text: \`header\`});
}"
`;

exports[`t-slot directive can define and call slots using old t-set keyword 4`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_footer_template\\"
    let h = this.h;
    let c1 = extra.parentNode;
    let c5 = [], p5 = {key:5};
    let vn5 = h('span', p5, c5);
    c1.push(vn5);
    c5.push({text: \`footer\`});
}"
`;

exports[`t-slot directive content is the default slot 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_default_template\\"
    let h = this.h;
    let c1 = extra.parentNode;
    let c4 = [], p4 = {key:4};
    let vn4 = h('span', p4, c4);
    c1.push(vn4);
    c4.push({text: \`sts rocks\`});
}"
`;

exports[`t-slot directive dafault slots can define a default content 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"__template__1\\"
    let h = this.h;
    let c4 = [], p4 = {key:4};
    let vn4 = h('span', p4, c4);
    const slot5 = this.constructor.slots[context.__owl__.slotId + '_' + 'default'];
    if (slot5) {
        slot5.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c4, parent: extra.parent || context}));
    } else {
        c4.push({text: \`default content\`});
    }
    return vn4;
}"
`;

exports[`t-slot directive default slot work with text nodes 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_default_template\\"
    let h = this.h;
    let c1 = extra.parentNode;
    c1.push({text: \`sts rocks\`});
}"
`;

exports[`t-slot directive multiple roots are allowed in a default slot 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_default_template\\"
    let h = this.h;
    let c1 = extra.parentNode;
    let c4 = [], p4 = {key:4};
    let vn4 = h('span', p4, c4);
    c1.push(vn4);
    c4.push({text: \`sts\`});
    let c5 = [], p5 = {key:5};
    let vn5 = h('span', p5, c5);
    c1.push(vn5);
    c5.push({text: \`rocks\`});
}"
`;

exports[`t-slot directive multiple roots are allowed in a named slot 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_content_template\\"
    let h = this.h;
    let c1 = extra.parentNode;
    let c4 = [], p4 = {key:4};
    let vn4 = h('span', p4, c4);
    c1.push(vn4);
    c4.push({text: \`sts\`});
    let c5 = [], p5 = {key:5};
    let vn5 = h('span', p5, c5);
    c1.push(vn5);
    c5.push({text: \`rocks\`});
}"
`;

exports[`t-slot directive named slots can define a default content 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"__template__1\\"
    let h = this.h;
    let c4 = [], p4 = {key:4};
    let vn4 = h('span', p4, c4);
    const slot5 = this.constructor.slots[context.__owl__.slotId + '_' + 'header'];
    if (slot5) {
        slot5.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c4, parent: extra.parent || context}));
    } else {
        c4.push({text: \`default content\`});
    }
    return vn4;
}"
`;

exports[`t-slot directive refs are properly bound in slots 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_footer_template\\"
    let utils = this.constructor.utils;
    context.__owl__.refs = context.__owl__.refs || {};
    let h = this.h;
    let c1 = extra.parentNode;
    let c8 = [], p8 = {key:8,on:{}};
    let vn8 = h('button', p8, c8);
    c1.push(vn8);
    extra.handlers['click__9__'] = extra.handlers['click__9__'] || function (e) {if (!context.__owl__.isMounted){return}utils.getComponent(context)['doSomething'](e);};
    p8.on['click'] = extra.handlers['click__9__'];
    const ref10 = \`myButton\`;
    p8.hook = {
      create: (_, n) => {
        context.__owl__.refs[ref10] = n.elm;
      },
      destroy: () => {
        delete context.__owl__.refs[ref10];
      },
    };
    c8.push({text: \`do something\`});
}"
`;

exports[`t-slot directive slots are rendered with proper context 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_footer_template\\"
    let utils = this.constructor.utils;
    let h = this.h;
    let c1 = extra.parentNode;
    let c8 = [], p8 = {key:8,on:{}};
    let vn8 = h('button', p8, c8);
    c1.push(vn8);
    extra.handlers['click__9__'] = extra.handlers['click__9__'] || function (e) {if (!context.__owl__.isMounted){return}utils.getComponent(context)['doSomething'](e);};
    p8.on['click'] = extra.handlers['click__9__'];
    c8.push({text: \`do something\`});
}"
`;

exports[`t-slot directive slots are rendered with proper context, part 2 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"Link\\"
    let scope = Object.create(context);
    let h = this.h;
    let _11 = scope['props'].to;
    let c12 = [], p12 = {key:12,attrs:{href: _11}};
    let vn12 = h('a', p12, c12);
    const slot13 = this.constructor.slots[context.__owl__.slotId + '_' + 'default'];
    if (slot13) {
        slot13.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c12, parent: extra.parent || context}));
    }
    return vn12;
}"
`;

exports[`t-slot directive slots are rendered with proper context, part 2 2`] = `
"function anonymous(context, extra
) {
    // Template name: \\"App\\"
    let utils = this.constructor.utils;
    let QWeb = this.constructor;
    let parent = context;
    let scope = Object.create(context);
    let h = this.h;
    let c1 = [], p1 = {key:1};
    let vn1 = h('div', p1, c1);
    let c2 = [], p2 = {key:2};
    let vn2 = h('u', p2, c2);
    c1.push(vn2);
    let _3 = scope['state'].users;
    if (!_3) { throw new Error('QWeb error: Invalid loop expression')}
    let _4 = _5 = _3;
    if (!(_3 instanceof Array)) {
        _4 = Object.keys(_3);
        _5 = Object.values(_3);
    }
    let _length4 = _4.length;
    let _origScope6 = scope;
    scope = Object.create(scope);
    for (let i1 = 0; i1 < _length4; i1++) {
        scope.user_first = i1 === 0
        scope.user_last = i1 === _length4 - 1
        scope.user_index = i1
        scope.user = _4[i1]
        scope.user_value = _5[i1]
        let key1 = scope['user'].id;
        let c7 = [], p7 = {key:\`\${key1}_7\`};
        let vn7 = h('li', p7, c7);
        c2.push(vn7);
        // Component 'Link'
        let k9 = \`__9__\${key1}__\`;
        let w8 = k9 in parent.__owl__.cmap ? parent.__owl__.children[parent.__owl__.cmap[k9]] : false;
        let props8 = {to:'/user/'+scope['user'].id};
        if (w8 && w8.__owl__.currentFiber && !w8.__owl__.vnode) {
            w8.destroy();
            w8 = false;
        }
        if (w8) {
            w8.__updateProps(props8, extra.fiber, Object.assign(Object.create(context), scope));
            let pvnode = w8.__owl__.pvnode;
            c7.push(pvnode);
        } else {
            let componentKey8 = \`Link\`;
            let W8 = context.constructor.components[componentKey8] || QWeb.components[componentKey8]|| scope['Link'];
            if (!W8) {throw new Error('Cannot find the definition of component \\"' + componentKey8 + '\\"')}
            w8 = new W8(parent, props8);
            parent.__owl__.cmap[k9] = w8.__owl__.id;
            w8.__owl__.slotId = 1;
            let fiber = w8.__prepare(extra.fiber, Object.assign(Object.create(context), scope), () => { const vnode = fiber.vnode; pvnode.sel = vnode.sel; });
            let pvnode = h('dummy', {key: k9, hook: {remove() {},destroy(vn) {w8.destroy();}}});
            c7.push(pvnode);
            w8.__owl__.pvnode = pvnode;
        }
        w8.__owl__.parentLastFiberId = extra.fiber.id;
    }
    scope = _origScope6;
    return vn1;
}"
`;

exports[`t-slot directive slots are rendered with proper context, part 2 3`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_default_template\\"
    let scope = Object.create(context);
    let h = this.h;
    let c7 = extra.parentNode;
    c7.push({text: \`User \`});
    let _10 = scope['user'].name;
    if (_10 != null) {
        c7.push({text: _10});
    }
}"
`;

exports[`t-slot directive slots are rendered with proper context, part 3 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"Link\\"
    let scope = Object.create(context);
    let h = this.h;
    let _10 = scope['props'].to;
    let c11 = [], p11 = {key:11,attrs:{href: _10}};
    let vn11 = h('a', p11, c11);
    const slot12 = this.constructor.slots[context.__owl__.slotId + '_' + 'default'];
    if (slot12) {
        slot12.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c11, parent: extra.parent || context}));
    }
    return vn11;
}"
`;

exports[`t-slot directive slots are rendered with proper context, part 3 2`] = `
"function anonymous(context, extra
) {
    // Template name: \\"App\\"
    let utils = this.constructor.utils;
    let QWeb = this.constructor;
    let parent = context;
    let scope = Object.create(context);
    let h = this.h;
    let c1 = [], p1 = {key:1};
    let vn1 = h('div', p1, c1);
    let c2 = [], p2 = {key:2};
    let vn2 = h('u', p2, c2);
    c1.push(vn2);
    let _3 = scope['state'].users;
    if (!_3) { throw new Error('QWeb error: Invalid loop expression')}
    let _4 = _5 = _3;
    if (!(_3 instanceof Array)) {
        _4 = Object.keys(_3);
        _5 = Object.values(_3);
    }
    let _length4 = _4.length;
    let _origScope6 = scope;
    scope = Object.create(scope);
    for (let i1 = 0; i1 < _length4; i1++) {
        scope.user_first = i1 === 0
        scope.user_last = i1 === _length4 - 1
        scope.user_index = i1
        scope.user = _4[i1]
        scope.user_value = _5[i1]
        let key1 = scope['user'].id;
        let c7 = [], p7 = {key:\`\${key1}_7\`};
        let vn7 = h('li', p7, c7);
        c2.push(vn7);
        utils.getScope(scope, 'userdescr').userdescr = 'User '+scope['user'].name;
        // Component 'Link'
        let k9 = \`__9__\${key1}__\`;
        let w8 = k9 in parent.__owl__.cmap ? parent.__owl__.children[parent.__owl__.cmap[k9]] : false;
        let props8 = {to:'/user/'+scope['user'].id};
        if (w8 && w8.__owl__.currentFiber && !w8.__owl__.vnode) {
            w8.destroy();
            w8 = false;
        }
        if (w8) {
            w8.__updateProps(props8, extra.fiber, Object.assign(Object.create(context), scope));
            let pvnode = w8.__owl__.pvnode;
            c7.push(pvnode);
        } else {
            let componentKey8 = \`Link\`;
            let W8 = context.constructor.components[componentKey8] || QWeb.components[componentKey8]|| scope['Link'];
            if (!W8) {throw new Error('Cannot find the definition of component \\"' + componentKey8 + '\\"')}
            w8 = new W8(parent, props8);
            parent.__owl__.cmap[k9] = w8.__owl__.id;
            w8.__owl__.slotId = 1;
            let fiber = w8.__prepare(extra.fiber, Object.assign(Object.create(context), scope), () => { const vnode = fiber.vnode; pvnode.sel = vnode.sel; });
            let pvnode = h('dummy', {key: k9, hook: {remove() {},destroy(vn) {w8.destroy();}}});
            c7.push(pvnode);
            w8.__owl__.pvnode = pvnode;
        }
        w8.__owl__.parentLastFiberId = extra.fiber.id;
    }
    scope = _origScope6;
    return vn1;
}"
`;

exports[`t-slot directive slots are rendered with proper context, part 3 3`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_default_template\\"
    let scope = Object.create(context);
    let h = this.h;
    let c7 = extra.parentNode;
    if (scope.userdescr != null) {
        c7.push({text: scope.userdescr});
    }
}"
`;

exports[`t-slot directive slots are rendered with proper context, part 4 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"App\\"
    let utils = this.constructor.utils;
    let QWeb = this.constructor;
    let parent = context;
    let scope = Object.create(context);
    let h = this.h;
    let c1 = [], p1 = {key:1};
    let vn1 = h('div', p1, c1);
    scope.userdescr = 'User '+scope['state'].user.name;
    // Component 'Link'
    let w2 = '__3__' in parent.__owl__.cmap ? parent.__owl__.children[parent.__owl__.cmap['__3__']] : false;
    let props2 = {to:'/user/'+scope['state'].user.id};
    if (w2 && w2.__owl__.currentFiber && !w2.__owl__.vnode) {
        w2.destroy();
        w2 = false;
    }
    if (w2) {
        w2.__updateProps(props2, extra.fiber, Object.assign(Object.create(context), scope));
        let pvnode = w2.__owl__.pvnode;
        c1.push(pvnode);
    } else {
        let componentKey2 = \`Link\`;
        let W2 = context.constructor.components[componentKey2] || QWeb.components[componentKey2]|| scope['Link'];
        if (!W2) {throw new Error('Cannot find the definition of component \\"' + componentKey2 + '\\"')}
        w2 = new W2(parent, props2);
        parent.__owl__.cmap['__3__'] = w2.__owl__.id;
        w2.__owl__.slotId = 1;
        let fiber = w2.__prepare(extra.fiber, Object.assign(Object.create(context), scope), () => { const vnode = fiber.vnode; pvnode.sel = vnode.sel; });
        let pvnode = h('dummy', {key: '__3__', hook: {remove() {},destroy(vn) {w2.destroy();}}});
        c1.push(pvnode);
        w2.__owl__.pvnode = pvnode;
    }
    w2.__owl__.parentLastFiberId = extra.fiber.id;
    return vn1;
}"
`;

exports[`t-slot directive slots are rendered with proper context, part 4 2`] = `
"function anonymous(context, extra
) {
    // Template name: \\"slot_default_template\\"
    let scope = Object.create(context);
    let h = this.h;
    let c1 = extra.parentNode;
    if (scope.userdescr != null) {
        c1.push({text: scope.userdescr});
    }
}"
`;

exports[`t-slot directive t-set t-value in a slot 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"__template__1\\"
    let h = this.h;
    let c4 = [], p4 = {key:4};
    let vn4 = h('span', p4, c4);
    const slot5 = this.constructor.slots[context.__owl__.slotId + '_' + 'default'];
    if (slot5) {
        slot5.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: c4, parent: extra.parent || context}));
    }
    return vn4;
}"
`;

exports[`t-slot directive template can just return a slot 1`] = `
"function anonymous(context, extra
) {
    // Template name: \\"__template__2\\"
    let utils = this.constructor.utils;
    let result;
    let h = this.h;
    const slot6 = this.constructor.slots[context.__owl__.slotId + '_' + 'default'];
    if (slot6) {
        let children7= []
        result = {}
        slot6.call(this, context.__owl__.scope, Object.assign({}, extra, {parentNode: children7, parent: extra.parent || context}));
        utils.defineProxy(result, children7[0]);
    }
    return result;
}"
`;
